--- a/contact.html
+++ b/contact.html
@@ -3,36 +3,62 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css"> -->
+	<!-- Primary Meta Tags -->
+	<title>La Chouette Agence - Contact</title>
+	<meta name="title" content="La chouette agence - Contact">
+	<meta name="description"
+		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
+	<meta name="Content-Type" content="UTF-8">
+	<meta name="Content-Language" content="fr">
+	<meta name="Identifier-Url" content="https://jenniferjoret.github.io/OC-P4/contact.html">
+
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://jenniferjoret.github.io/OC-P4/contact.html">
+	<meta property="og:title" content="La chouette agence - Contact">
+	<meta property="og:description"
+		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
+	<meta property="og:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://jenniferjoret.github.io/OC-P4/contact.html">
+	<meta property="twitter:title" content="La chouette agence - Contact">
+	<meta property="twitter:description"
+		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets. Contactez-nous !">
+	<meta property="twitter:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
+
+
+	<!--ICONES-->
+	<link rel="apple-touch-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/ico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/ico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/ico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="img/ico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+	<link rel="manifest" href="img/ico/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="img/ico/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
-
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
-
-	<!-- <script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script> -->
-	<title>page2</title>
-
-
-	<!-- Analytics -->
-
-	<!-- Analytics END -->
-
 </head>
 
 <body class="container-fluid p-0 no-gutters">
@@ -109,7 +135,8 @@
 					<h2 class="my-4">INFORMATIONS DE CONTACT</h2>
 					<ul class="list-unstyled d-flex flex-column">
 						<li>
-							<p><span>Mail :</span><a href="mailto:contact@lachouetteagence.com"> contact@lachouetteagence.com</a></p>
+							<p><span>Mail :</span><a href="mailto:contact@lachouetteagence.com">
+									contact@lachouetteagence.com</a></p>
 						</li>
 						<li>
 							<p><span>Adresse :</span> 2 place Sathonay 69001 Lyon</p>
@@ -130,8 +157,7 @@
 		<!-- bloc-7 END -->
 
 		<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i
-				class="fa fa-chevron-up"></i></a>
+		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i class="fa fa-chevron-up"></i></a>
 		<!-- ScrollToTop Button END-->
 
 	</main>
