--- a/index.html
+++ b/index.html
@@ -3,13 +3,60 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">-->
+	<!-- Primary Meta Tags -->
+	<title>La Chouette Agence</title>
+	<meta name="title" content="La chouette agence!">
+	<meta name="description"
+		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
+	<meta name="Content-Type" content="UTF-8">
+	<meta name="Content-Language" content="fr">
+	<meta name="Identifier-Url" content="https://jenniferjoret.github.io/OC-P4/">
+
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://jenniferjoret.github.io/OC-P4/">
+	<meta property="og:title" content="La chouette agence!">
+	<meta property="og:description"
+		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
+	<meta property="og:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://jenniferjoret.github.io/OC-P4/">
+	<meta property="twitter:title" content="La chouette agence!">
+	<meta property="twitter:description"
+		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Basés à Lyon, nous serons ravi de mener à bien vos projets.">
+	<meta property="twitter:image" content="https://jenniferjoret.github.io/OC-P4/img/logo.png">
+
+
+	<!--ICONES-->
+	<link rel="apple-touch-icon" sizes="57x57" href="img/ico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/ico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/ico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/ico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/ico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="img/ico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/ico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/ico/favicon-16x16.png">
+	<link rel="manifest" href="img/ico/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="img/ico/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
+	<!--Si la version d'IE est antétieure à la 9, les nouvelles balises HTML5 ne sont pas reconnues -->
+	<!--[if lt IE 9]>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
 
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
@@ -17,18 +64,6 @@
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<!-- <script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script> -->
-	<!-- <script src="./js/blocs.js"></script> -->
-	<!-- <script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script> -->
-
-	<title>.</title>
-
-
-	<!-- Analytics -->
-
-	<!-- Analytics END -->
 
 </head>
 
@@ -212,26 +247,25 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
-				<!-- ScrollToTop Button -->
-				<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i
-					class="fa fa-chevron-up"></i></a>
-			<!-- ScrollToTop Button END-->
+		<!-- ScrollToTop Button -->
+		<a class="bloc-button btn btn-d scrollToTop" id="back-to-top" href="#"><i class="fa fa-chevron-up"></i></a>
+		<!-- ScrollToTop Button END-->
 	</main>
-		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<section class="container bloc-sm">
-				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.
-				</p>
-				<div class="d-flex justify-content-around text-center col-8 col-md-3 mx-auto">
-						<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-						<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-						<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-						<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-				</div>
-			</section>
-		</footer>
-		<!-- Footer - bloc-8 END -->
+	<!-- Footer - bloc-8 -->
+	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<section class="container bloc-sm">
+			<p class="text-center white">
+				La chouette agence - Agence web basée à Lyon.
+			</p>
+			<div class="d-flex justify-content-around text-center col-8 col-md-3 mx-auto">
+				<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+				<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+				<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+				<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+			</div>
+		</section>
+	</footer>
+	<!-- Footer - bloc-8 END -->
 
 	<!-- Principal conteneur END -->
 
