--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,7 @@
 	<meta name="msapplication-TileImage" content="img/ico/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-
-	<script src="https://kit.fontawesome.com/6a709f68db.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -102,8 +101,7 @@
 		<!-- bloc-7 -->
 		<section class="bloc bgc-white l-bloc" id="bloc-7">
 			<div class="col-12 mx-auto d-flex flex-wrap justify-content-around mt-5">
-				<form id="form_1" class="col-12 col-md-6" novalidate success-msg="Votre message a été envoyé."
-					fail-msg="Oops, il semble que notre serveur ne réponde pas. Votre message n'a pas été envoyé.">
+				<form id="form_1" class="col-12 col-md-6">
 					<div class="form-group">
 						<label>
 							Nom
@@ -150,7 +148,7 @@
 			<div class="col-8 mx-auto my-5">
 				<iframe id="g-maps-lca"
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d347.8857043255585!2d4.829982896540446!3d45.76947403077419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1591975332032!5m2!1sfr!2sfr"
-					frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+					 allowfullscreen="" aria-hidden="false" tabindex="0">
 				</iframe>
 			</div>
 		</section>
@@ -170,10 +168,10 @@
 			<div class="col-12 d-flex flex-wrap justify-content-between">
 
 				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto">
-					<a class="social" href="index.html"><i class="fa fa-twitter icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-facebook icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-dribbble icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-instagram icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-twitter icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-facebook-f icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-dribbble icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-instagram icon-md"></i></a>
 				</div>
 				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left text-white pt-3"><i
 						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
