--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-	<script src="https://kit.fontawesome.com/6a709f68db.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+
+		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -107,28 +108,34 @@
 	<main>
 
 		<section class="bloc l-bloc text-center col-lg-8 mx-auto my-5">
-			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
+			<p class="h4 col-8 mx-auto text-center my-5">La chouette agence est une agence de web design qui aide les
+				entreprises à devenir attractives et visibles sur Internet.</p>
 			<div class="text-center col-12 d-flex mx-auto justify-content-around my-5">
 				<div class="col-sm-3 my-5">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icon-lg"></span>
 					<h3 class="my-3 h5">WEB DESIGN</h3>
-					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
+					<p>Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro,
+						laissez-nous vous réaliser un design dont vous serez fier.</p>
 				</div>
 				<div class="col-sm-3 my-5">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icon-lg"></span>
 					<h3 class="my-3 h5">STRATÉGIE</h3>
-					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.
+					<p>Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos
+						objectifs commerciaux afin de vous proposer le meilleur design possible.
 					</p>
 				</div>
 				<div class="col-sm-3 my-5">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icon-lg"></span>
 					<h3 class="my-3 h5">ILLUSTRATIONS</h3>
-					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.</p>
+					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes
+						talentueux pour donner à vos pages une touche finale d'élégance.</p>
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 mx-auto text-center mt-5 mb-3">
 				<blockquote class="blockquote mb-0">
-					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+					<p class="h5 font-italic">"La chouette agence est une excellente agence web ! Les web designers ont
+						réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à
+						doubler nos ventes en ligne à Lyon."</p>
 					<footer class="blockquote-footer">Maxime Guibard, PDG de <cite>À vos fourchettes</cite></footer>
 				</blockquote>
 			</div>
@@ -139,10 +146,14 @@
 			<div class="tight-width-whitespace black-background">
 				<div class="col-sm-12 text-center">
 					<h2 class="my-3 tc-white">
-						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
+						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le
+						succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 					</h2>
 					<p class="text-white">
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
+						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient
+						besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin
+						d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
+						Nous travaillerons ensemble pour créer des sites beau et bien structurés,
 						qui seront facilement trouvable sur les moteurs de recherche.</p>
 					<a class="text-white bold-link" href="contact.html">Contactez notre équipe</a>
 				</div>
@@ -203,11 +214,11 @@
 						Conception d'un site pour une agence de mariage
 					</h3>
 					<p class="text-center">
-						Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+						Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation
+						détaillée de leurs prestations.
 					</p>
 				</div>
 			</section>
-			</div>
 		</div>
 
 		<div class="bloc bg-banniere d-bloc bloc-bg-texture texture-paper">
@@ -235,10 +246,10 @@
 			<div class="col-12 d-flex flex-wrap justify-content-between">
 
 				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto">
-					<a class="social" href="index.html"><i class="fa fa-twitter icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-facebook icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-dribbble icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-instagram icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-twitter icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-facebook-f icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-dribbble icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-instagram icon-md"></i></a>
 				</div>
 				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left text-white pt-3"><i
 						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
