--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -53,7 +53,7 @@
     <meta name="theme-color" content="#ffffff">
 
 
-    <script src="https://kit.fontawesome.com/6a709f68db.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -94,9 +94,7 @@
         </section>
     </header>
 
-    <main class="page-container">
-
-        <article class="bloc bgc-white l-bloc col-8 mx-auto my-5 text-center">
+    <main class="page-container bloc bgc-white l-bloc col-8 mx-auto my-5 text-center">
             <section class="py-4">
                 <h2 class=" py-2 mx-auto">Présentation du site :</h2>
                 <p>En vertu de l’article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance
@@ -260,7 +258,6 @@
                 <p>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la
                     directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
             </section>
-        </article>
 
 
         <!-- ScrollToTop Button -->
@@ -269,7 +266,7 @@
 
     </main>
     <!-- Footer - bloc-8 -->
-    <footer class="bloc bgc-atomic-tangerine d-bloc p-0">
+	<footer class="bloc bgc-atomic-tangerine d-bloc p-0">
 		<section class="container py-3 text-center col-12">
 			<h5 class="text-white col-12 pb-4">
 				La chouette agence - Agence web basée à Lyon.
@@ -277,10 +274,10 @@
 			<div class="col-12 d-flex flex-wrap justify-content-between">
 
 				<div class="d-flex justify-content-around text-center col-8 order-md-2 col-md-3 mx-auto">
-					<a class="social" href="index.html"><i class="fa fa-twitter icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-facebook icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-dribbble icon-md"></i></a>
-					<a class="social" href="index.html"><i class="fa fa-instagram icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-twitter icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-facebook-f icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-dribbble icon-md"></i></a>
+					<a class="social" href="index.html"><i class="fab fa-instagram icon-md"></i></a>
 				</div>
 				<a href="mentions-legales.html" class="col-6 col-md-3 order-md-1 text-left text-white pt-3"><i
 						class="fas fa-file-contract fa-lg pr-2"></i>Mentions légales</a>
